2016-05-15  Charlie Zender  <zender@uci.edu>

	* Add stubs for CIE luminosity functions

	* Diagnose radiances from DISORT2 uu array, not deprecated DISORT1 u0u array

2016-05-09  Charlie Zender  <zender@uci.edu>

	* Add diagnostics for geoengineering study

2013-06-12  Charlie Zender  <zender@uci.edu>

	* Need to test how HITRAN 2012 changes swnb2 relative to HITRAN 2008

	* Updated ln_nbr_max, and re-ran htrn2nb on all SW-active gases	for swnb2

	* Verified swnb2 still works with HITRAN 2008

2013-06-11  Charlie Zender  <zender@uci.edu>

	* Updating to HITRAN 2012

2011-04-03  Charlie Zender  <zender@uci.edu>

	* Alter Makefile compile and link to use nc-config --fflags, --flibs

2010-08-09  Charlie Zender  <zender@uci.edu>

	* Default to NETCDFF=Y and link to libnetcdff.a by default

2010-01-12  Charlie Zender  <zender@uci.edu>

	* cd;svn tag -c f-2.2.0 aca f (fxm)

	* Improve MPI compilation on greenplanet

	* Update CRM homepage location from NCAR to dust.ess.uci.edu

	* Fix uninitialized memory access bug caused by confusing flg_msm and flg_snw.
	Confusing because clm uses flg_snw in same sense that swnb2 uses flg_msm.
	Should be consistent across programs.

	* clm now writes multi-layer snow model data only when flg_snw is true.
	In netCDF3 a zero-length dimension for lev_snw has cascading effects.
	One is that zero-length dimensions are interpreted as the record dimension!
	But netCDF4 allows multiple record dimensions, so lev_snw and ... another

2010-01-08  Charlie Zender  <zender@uci.edu>

	* Replace declarations like "character src_rfr_sng*200" with initialization
	statements so that valgrind thinks strings are initialized when used.

2009-11-22  Charlie Zender  <zender@uci.edu>

	* Change more occurances of _up to _upw

	* Fix more pedantic errors caught by GCC gfortran 4.4.1

2009-08-04  Charlie Zender  <zender@uci.edu>

	* Deprecate -fno-second-underscore from gfortran compilation

	* Allow linking to distro- (i.e., Debian-) supplied libnetcdff.a