@@ -1,6 +1,8 @@
-2016-05-15  Charlie Zender  <zender@uci.edu>
+2016-05-16  Charlie Zender  <zender@uci.edu>
 
-	* Add stubs for CIE luminosity functions
+	* Add CIE luminosity function I/O
+
+2016-05-15  Charlie Zender  <zender@uci.edu>
 
 	* Diagnose radiances from DISORT2 uu array, not deprecated DISORT1 u0u array
 
